--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.3",
         "mongoose": "^8.19.1",
+        "nodemailer": "^7.0.11",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
         "zod": "^4.1.12"
@@ -42,6 +43,7 @@
         "@types/express": "^5.0.0",
         "@types/jest": "^30.0.0",
         "@types/node": "^22.10.7",
+        "@types/nodemailer": "^7.0.4",
         "@types/supertest": "^6.0.2",
         "@typescript-eslint/eslint-plugin": "^8.46.0",
         "@typescript-eslint/parser": "^8.46.0",
