--- a/config/.env.development
+++ b/config/.env.development
@@ -15,14 +15,17 @@ MOOD="development"
 
 
 
+# =========SocialApp
+# APP_NAME="Route_Social_App"
+# APP_PASSWORD="geri cbag lels krfz"
+# APP_GMAIL="sohailalakhdar@gmail.com"
 
-# APP_NAME=Route_Social_App
-APP_PASSWORD="geri cbag lels krfz"
+APP_NAME="NestApp"
+APP_PASSWORD="snha oufg jhgd kkhc"
 APP_GMAIL="sohailalakhdar@gmail.com"
 
-
 # email
-EMAIL='sohailalakhdar1@gmail.com'
+EMAIL='sohailalakhdar@gmail.com'
 
 #CLOUD
 CLOUD_NAME="dglzshtyv"
