--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@nestjs/common": "^11.0.1",
         "@nestjs/config": "^4.0.2",
         "@nestjs/core": "^11.0.1",
+        "@nestjs/jwt": "^11.0.1",
         "@nestjs/mapped-types": "*",
         "@nestjs/mongoose": "^11.0.3",
         "@nestjs/platform-express": "^11.0.1",
@@ -30,10 +31,12 @@
         "bcryptjs": "^3.0.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.3",
+        "jsonwebtoken": "^9.0.3",
         "mongoose": "^8.19.1",
         "nodemailer": "^7.0.11",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
+        "uuid": "^13.0.0",
         "zod": "^4.1.12"
     },
     "devDependencies": {
@@ -46,9 +49,11 @@
         "@types/bcryptjs": "^3.0.0",
         "@types/express": "^5.0.0",
         "@types/jest": "^30.0.0",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^22.10.7",
         "@types/nodemailer": "^7.0.4",
         "@types/supertest": "^6.0.2",
+        "@types/uuid": "^11.0.0",
         "@typescript-eslint/eslint-plugin": "^8.46.0",
         "@typescript-eslint/parser": "^8.46.0",
         "eslint": "^9.37.0",
