--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "nodemailer": "^7.0.11",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
+        "slugify": "^1.6.6",
         "uuid": "^13.0.0",
         "zod": "^4.1.12"
     },
