--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
         "slugify": "^1.6.6",
+        "stripe": "^20.3.1",
         "uuid": "^13.0.0",
         "zod": "^4.1.12"
     },
